@@ -2,6 +2,7 @@ Revision history for Perl extension Text::CSV::Track, Track::Max, Track::Min.
 
 0.4 2007
    - trunc option
+   - fixed adding empty header lines if some missing
 
 0.3   Jan 18 2007
 	- multi column csv support for Track
